--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                 <p>
                     You can view my coding projects on my GitHub profile here:
                     <br>
-                    <p class="center"><a href="https://github.com/natkaf" target="_blank">The Tech Academy Github</a></p>
+                    <p class="center"><a href="https://github.com/dzmit83" target="_blank">The Tech Academy Github</a></p>
                 </p>
             </div>
             <!--Right column-->
