--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
             </div>
             <!-- Right column -->
             <div class="Column_2">
-                <a href="https://github.com/dzmit83" target="_blank"><img src="images/GitHub.png"></a>
+                <a href="https://github.com/dzmit83" target="blank"><img src="images/GitHub.png"></a>
             </div>
         </div>
 
